--- a/Records/1-10.md
+++ b/Records/1-10.md
@@ -103,3 +103,45 @@ public:
 ```
 
 
+#### 3. 无重复字符的最长子串 [滑动数组]
+>给定一个字符串`s`，请你找出其中不含有重复字符的`最长子串`的长度。
+
+需要使用一种数据结构来判断 **是否有重复的字符**，常用的数据结构为哈希集合（即 C++ 中的 `std::unordered_set`，Java 中的 `HashSet`，Python 中的 `set`, JavaScript 中的 `Set`）
+
+依次递增地枚举子串的起始位置，那么子串的结束位置也是递增的！这里的原因在于，假设我们选择字符串中的第k个字符作为起始位置，并且得到了不包含重复字符的最长子串的结束位置为rk。那么当我们选择第k+1个字符作为起始位置时，首先从k+1到rk+1的字符显然是不重复的，并且由于少了原本的第k个字符，我们可以尝试继续增大rk，直到右侧出现了重复字符为止。
+```javascript
+var lengthOfLongestSubstring = function(s) {
+    let left = 0;
+    let ans = 0;
+    const hashSet = new Set();
+    for(let i=0;i<s.length; i++){
+        while(hashSet.has(s[i])){
+            hashSet.delete(s[left]);
+            left++;
+        }
+        ans = Math.max(ans,i-left+1);
+        hashSet.add(s[i]);
+    }
+    return ans;
+};
+```
+```cpp
+class Solution {
+public:
+    int lengthOfLongestSubstring(string s) {
+        int len = s.size();
+        int left = 0;
+        int ans = 0;
+        unordered_set<char> hashSet;
+        for(int i=0; i<len; i++){
+            while(hashSet.find(s[i])!=hashSet.end()){
+                hashSet.erase(s[left]);
+                left++;
+            }
+            ans = max(ans,i-left+1);
+            hashSet.insert(s[i]);
+        }
+        return ans;
+    }
+};
+```
