--- a/Records/1-10.md
+++ b/Records/1-10.md
@@ -329,3 +329,35 @@ public:
     }
 };
 ```
+
+#### 6. N字形变换
+>将一个给定字符串 s 根据给定的行数 numRows ，以从上往下、从左到右进行 Z 字形排列
+```js
+class Solution {
+public:
+    string convert(string s, int numRows) {
+        string ans;
+        vector<string> matric(numRows);
+        int len = s.size();
+        int column = 0;
+        int flag = -1;
+
+        if(numRows == 1 || len <= numRows){
+            return s;
+        }
+        
+        for(int i=0; i<len; i++){
+            matric[column] += s[i];
+            if(column==0 || column==numRows-1){ // 行首行尾变向
+                flag = -flag;
+            }
+            column+= flag;
+        }
+        for(auto &row : matric){
+            ans += row;
+        }
+        return ans;
+
+    }
+};
+```
