--- a/Records/1-10.md
+++ b/Records/1-10.md
@@ -361,3 +361,164 @@ public:
     }
 };
 ```
+
+#### 7. 整数反转
+>给你一个 32 位的有符号整数 x ，返回将 x 中的数字部分反转后的结果.如果反转后整数超过 32 位的有符号整数的范围 `[−2^31,  2^31 − 1]` ，就返回 0
+```c++
+class Solution {
+public:
+    int reverse(int x) {
+        int rev = 0;
+        while (x != 0) {
+            if (rev < INT_MIN / 10 || rev > INT_MAX / 10) {
+                return 0;
+            }
+            int digit = x % 10;
+            x /= 10;
+            rev = rev * 10 + digit;
+        }
+        return rev;
+    }
+};
+```
+
+
+#### 8. 字符串转换整数 (atoi)
+>函数 myAtoi(string s) 的算法如下：
+>- 读入字符串并丢弃无用的前导空格
+>- 检查下一个字符（假设还未到字符末尾）为正还是负号，读取该字符（如果有）。 确定最终结果是负数还是正数。 如果两者都不存在，则假定结果为正。
+>- 读入下一个字符，直到到达下一个非数字字符或到达输入的结尾。字符串的其余部分将被忽略。
+>- 将前面步骤读入的这些数字转换为整数（即，"123" -> 123， "0032" -> 32）。如果没有读入数字，则整数为 0 。必要时更改符号（从步骤 2 开始）。
+>- 如果整数数超过 32 位有符号整数范围 [−2^31,  2^31 − 1] ，需要截断这个整数，使其保持在这个范围内。具体来说，小于 −2^31 的整数应该被固定为 −2^31 ，大于 2^31 − 1 的整数应该被固定为 2^31 − 1 。
+>- 返回整数作为最终结果。
+
+```c++
+class Solution {
+public:
+    int myAtoi(string str) {
+        unsigned long len = str.length();
+
+        // 去除前导空格
+        int index = 0;
+        while (index < len) {
+            if (str[index] != ' ') {
+                break;
+            }
+            index++;
+        }
+
+        if (index == len) {
+            return 0;
+        }
+
+        int sign = 1;
+        // 处理第 1 个非空字符为正负符号，这两个判断需要写在一起
+        if (str[index] == '+') {
+            index++;
+        } else if (str[index] == '-') {
+            sign = -1;
+            index++;
+        }
+
+        // 根据题目限制，只能使用 int 类型
+        int res = 0;
+        while (index < len) {
+            char curChar = str[index];
+            if (curChar < '0' || curChar > '9') {
+                break;
+            }
+
+            if (res > INT_MAX / 10 || (res == INT_MAX / 10 && (curChar - '0') > INT_MAX % 10)) {
+                return INT_MAX;
+            }
+            if (res < INT_MIN / 10 || (res == INT_MIN / 10 && (curChar - '0') > -(INT_MIN % 10))) {
+                return INT_MIN;
+            }
+
+            res = res * 10 + sign * (curChar - '0');
+            index++;
+        }
+        return res;
+    }
+};
+```
+#### 9. 回文数
+>给你一个整数 x ，如果 x 是一个回文整数，返回 true ；否则，返回 false 
+回文数是指正序（从左向右）和倒序（从右向左）读都是一样的整数。
+```cpp
+// class Solution {
+// public:
+//     bool isPalindrome(int x) {
+//         // 转成字符串进行判断
+//         string s = to_string(x);
+//         // 定义双指针
+//         int left = 0, right = s.length() - 1;
+//         while(left < right) {
+//             // 判断不是回文，返回false
+//             if(s[left] != s[right]) {
+//                 return false;
+//             }
+//             // 左右指针移动
+//             left ++;
+//             right --;
+//         }
+//         return true;
+//     }
+// };
+
+class Solution {
+    public:
+    bool isPalindrome(int x) {
+        if (x < 0) return false; // 负数就是false
+        long long y = 0; // 防止溢出
+        int flag = x; // 留一个做比较
+        while(x != 0){  // 常见处理，如上面的力扣7.整数反转
+            y = y * 10 + x % 10;
+            x = x / 10;
+        }
+        return flag == y;  // 写成逻辑式，判断是否回文
+    }
+};
+```
+
+#### 10. 正则表达式匹配
+>给你一个字符串 s 和一个字符规律 p，请你来实现一个支持 '.' 和 '*' 的正则表达式匹配。
+>- '.' 匹配任意单个字符
+>- '*' 匹配零个或多个前面的那一个元素
+```js
+const isMatch = (s, p) => {
+  if (s == null || p == null) return false;
+
+  const sLen = s.length, pLen = p.length;
+
+  const dp = new Array(sLen + 1);
+  for (let i = 0; i < dp.length; i++) {
+    dp[i] = new Array(pLen + 1).fill(false); // 将项默认为false
+  }
+  // base case
+  dp[0][0] = true;
+  for (let j = 1; j < pLen + 1; j++) {
+    if (p[j - 1] == "*") dp[0][j] = dp[0][j - 2];
+  }
+  // 迭代
+  for (let i = 1; i < sLen + 1; i++) {
+    for (let j = 1; j < pLen + 1; j++) {
+
+      if (s[i - 1] == p[j - 1] || p[j - 1] == ".") {
+        dp[i][j] = dp[i - 1][j - 1];
+      } else if (p[j - 1] == "*") {
+        if (s[i - 1] == p[j - 2] || p[j - 2] == ".") {
+          dp[i][j] = dp[i][j - 2] || dp[i - 1][j - 2] || dp[i - 1][j];
+        } else {
+          dp[i][j] = dp[i][j - 2];
+        }
+      }
+    }
+  }
+  return dp[sLen][pLen]; // 长sLen的s串 是否匹配 长pLen的p串
+};
+// 作者：xiao_ben_zhu
+// 链接：https://leetcode.cn/problems/regular-expression-matching/solution/shou-hui-tu-jie-wo-tai-nan-liao-by-hyj8/
+// 来源：力扣（LeetCode）
+// 著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
