--- a/JSTest/笔试题/前端读代码题.md
+++ b/JSTest/笔试题/前端读代码题.md
@@ -869,6 +869,22 @@ console.log(obj.getY()) // 6
 >- getY是由obj调用的，所以其this指向的是obj对象，会打印出6。
 
 > this绑定的优先级：**new绑定 > 显式绑定 > 隐式绑定 > 默认绑定**。
+> 匿名函数 => 没有名字的函数
+> 单独运行一个匿名函数 => 包裹一个括号
+```js
+(function (){
+    //由于没有执行该匿名函数，所以不会执行匿名函数体内的语句。
+    console.log("张培跃");
+})
+```
+> 需要执行匿名函数，在匿名函数后面加上一个括号;需要传值，直接将参数写到括号内
+```js
+(function (){
+    //由于没有执行该匿名函数，所以不会执行匿名函数体内的语句。
+    console.log("张培跃");
+})()
+```
+
 
 ##### 3.0 作用域&变量提升&闭包
 
