--- a/JSTest/面试知识点/工程化.md
+++ b/JSTest/面试知识点/工程化.md
@@ -10,6 +10,39 @@ Module 是单个文件或代码单元，Bundle 是将多个模块打包合并而
 3. Chunk（块）：
    Chunk（块）： Chunk 通常是指 Webpack 或其他打包工具在打包过程中分割出的代码块，一个 Chunk 包含一个或多个模块，它可以是异步加载的代码片段。通常在使用代码分割（Code Splitting）时会生成多个 Chunk，这些 Chunk 可以在需要时按需加载，从而优化页面加载性能。
 
+### Loader 和 Plugin 是两个核心概念，它们在功能和使用方式上有明显的区别，下面从多个方面详细介绍
+
+- **Loader**
+
+  - **作用**：Loader 主要用于对模块的源代码进行转换。Webpack 本身只能处理 JavaScript 模块，如果要处理其他类型的文件（如 CSS、图片、TypeScript 等），就需要使用相应的 Loader 将这些文件转换为 Webpack 能够处理的模块。
+  - **示例**：
+    - `css-loader`：用于解析 CSS 文件中的`@import`和`url()`语句，将 CSS 文件转换为 JavaScript 模块。
+    - `style-loader`：将 CSS 模块注入到 DOM 中，使样式生效。
+    - `babel-loader`：使用 Babel 将 ES6+代码转换为向后兼容的 JavaScript 代码，以确保在旧版本浏览器中也能正常运行。
+
+- **Plugin**
+  - **作用**：Plugin 的功能更加广泛，它可以在 Webpack 构建过程的不同阶段执行特定的任务，如打包优化、资源管理、环境变量注入等。Plugin 可以干预整个构建过程，不仅仅局限于模块的转换。
+  - **示例**：
+    - `HtmlWebpackPlugin`：自动生成 HTML 文件，并将打包后的 JavaScript 和 CSS 文件插入到 HTML 中。
+    - `CleanWebpackPlugin`：在每次构建前清理输出目录，确保输出目录只包含最新的打包文件。
+    - `MiniCssExtractPlugin`：将 CSS 提取到单独的文件中，而不是内联到 JavaScript 中，以提高性能。
+
+### 执行时机
+
+- **Loader**
+  - Loader 是在模块导入时执行，它按照配置的规则对每个匹配的模块进行转换。Loader 的执行是链式的，从右到左依次执行。
+- **Plugin**
+  - Plugin 在 Webpack 构建过程的不同钩子（Hook）上执行，这些钩子对应着构建过程的各个阶段，如编译前、编译后、打包完成等。Plugin 可以在这些钩子上注册自己的任务，从而在特定的时机执行。
+
+### 使用方式
+
+- **Loader**
+
+  - Loader 通过`module.rules`配置项进行配置。每个规则包含一个`test`属性，用于匹配模块的文件路径，以及一个`use`属性，用于指定要使用的 Loader 数组。
+
+- **Plugin**
+  - Plugin 通过`plugins`配置项进行配置。`plugins`是一个数组，数组中的每个元素都是一个 Plugin 实例。在创建 Plugin 实例时，可以传入相应的配置参数。
+
 ### 常见 Loader：
 
 - JavaScript 相关：
