--- a/JSTest/面试知识点/浏览器.md
+++ b/JSTest/面试知识点/浏览器.md
@@ -88,3 +88,24 @@ document.cookie = "a=3; max-age=-1";
 - `document.getElementsByTagName('*')`
 - `$$('*')`，可在浏览器控制台使用
 - `document.all`，已废弃，不建议使用
+
+##### Chrome 和 Safari 浏览器都有强大的内置前端调试工具，此外也有一些第三方工具可用于辅助调试，以下是具体介绍：
+
+###### Chrome 前端调试工具
+
+- **开发者工具（DevTools）**
+  - **元素面板（Elements）**：可以查看和修改 HTML 结构与 CSS 样式，实时显示页面的 DOM 树和 CSS 规则，方便调试页面布局和样式问题。
+  - **控制台（Console）**：用于输出调试信息、执行 JavaScript 代码片段、查看错误信息等，是调试 JavaScript 的重要工具。
+  - **源代码面板（Sources）**：能查看和调试网页的 JavaScript 源代码，支持设置断点、单步调试等操作，帮助开发者理解代码执行流程和查找逻辑错误。
+  - **网络面板（Network）**：可以监控网络请求和响应，查看请求的 URL、状态码、响应时间、请求头和响应头信息等，有助于分析网络性能问题和接口调用情况。
+  - **性能面板（Performance）**：能够记录和分析页面的性能数据，如页面加载时间、脚本执行时间、渲染时间等，通过火焰图等可视化方式展示，帮助开发者优化页面性能。
+- **Lighthouse**：是一款 Chrome 插件，可用于对网页进行性能、可访问性、最佳实践等方面的审计，生成详细的报告，为网页优化提供指导。
+- **Postman**：主要用于 API 测试和调试，可发送各种 HTTP 请求，查看响应结果，支持请求参数、请求头和响应数据的查看和编辑，方便与后端开发人员协作调试接口。
+
+###### Safari 前端调试工具
+
+- **Web Inspector**：与 Chrome 的开发者工具类似，Safari 的 Web Inspector 也提供了元素检查、JavaScript 调试、网络监控等功能。可以通过“开发”菜单打开，方便开发者对网页进行调试和分析。
+  - **资源面板（Resources）**：能够查看网页加载的各种资源，如 HTML、CSS、JavaScript 文件，以及图片、字体等，还可以查看本地存储和缓存数据。
+  - **时间轴面板（Timeline）**：用于分析页面的动画、脚本执行、布局和绘制等操作的时间分布，帮助开发者优化页面的流畅性和响应速度。
+- **Remote Debugging**：可以将 Safari 与 iOS 设备连接，对 iOS 设备上的 Safari 浏览器进行远程调试，方便开发人员测试和调试移动网页。
+- **Charles**：是一款网络抓包工具，在 Safari 上可以通过设置代理，使用 Charles 拦截和分析网络请求，查看请求和响应的详细信息，对于调试网络相关问题非常有帮助。
